--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "reactjs-boilerplate",
+  "name": "boilerplate-reactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.4",
+    "@headlessui/react": "^1.6.1",
+    "clsx": "^1.1.1",
     "md5": "^2.3.0",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
@@ -43,11 +42,12 @@
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "autoprefixer": "^10.4.7",
     "husky": "^6.0.0",
+    "postcss": "^8.4.13",
     "prettier": "^2.3.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.1.2"
   }
 }
